@@ -1,0 +1,4 @@
+[main]
+template_engine = jinja2
+
+static_files = static
