@@ -1,0 +1,2 @@
+[main]
+static_files = static
